--- a/arch/arm64/boot/dts/marvell/armada-3720-espressobin-ultra.dts
+++ b/arch/arm64/boot/dts/marvell/armada-3720-espressobin-ultra.dts
@@ -74,9 +74,6 @@
 
 &spi0 {
 	flash@0 {
-		spi-max-frequency = <20000000>;
-		m25p,fast-read;
-
 		partitions {
 			compatible = "fixed-partitions";
 			#address-cells = <1>;
@@ -114,17 +111,20 @@
 
 &usb3 {
 	usb-phy = <&usb3_phy>;
-	status = "okay";
 };
 
 &mdio {
 	extphy: ethernet-phy@1 {
 		reg = <1>;
+
+		reset-gpios = <&gpionb 2 GPIO_ACTIVE_LOW>;
 	};
 };
 
 &switch0 {
 	reg = <3>;
+
+	reset-gpios = <&gpiosb 23 GPIO_ACTIVE_LOW>;
 
 	ports {
 		switch0port1: port@1 {
